k8s/api.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: legal-api
  namespace: legal-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: legal-api
  template:
    metadata:
      labels:
        app: legal-api
    spec:
      volumes:
        - name: legal-api-jwt-secret
          secret:
            secretName: legal-api-jwt-secret
      containers:
        - name: legal-api
          image: registry.EXAMPLE.COM/legal-api/legal-api
          lifecycle:
            postStart:
              exec:
                command: ["/bin/bash", "-c", "sequelize db:migrate"]
          ports:
          - containerPort: 80
          volumeMounts:
          - name: legal-api-jwt-secret
            mountPath: "/app/private.pem"
            subPath: private.pem
          - name: legal-api-jwt-secret
            mountPath: "/app/public.pem"
            subPath: public.pem
