k8s/api.service.yml
apiVersion: v1
kind: Service
metadata:
  name: legal-api
  namespace: legal-api
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: legal-api
